tests/func/parsing/error_reporting/custom_hints/expected_operator_glr.err
1:6: syntax error: unexpected token number(4)
    1 | 2 + 3 4 * 7
      |       ^^^ expected: * +
  hint: You must have an operator between numbers